# Perovskites_Classification

./: hello.py  pyproject.toml
.github/workflows/: deploy.yml
_site/: index.html
_site/public/: final_candidates.xlsx  formability_database.xlsx
notebook/: abo3.py  model_generator.py
notebook/__marimo__/session/: abo3.py.json  model_generator.py.json
notebook/layouts/: model_generator.grid.json
notebook/public/: perovskite_data.csv  stability_database.xlsx
notebook/public/pic/: rf_rocpng
