[project]
name = "eee-4709-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.11.22",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "skfeature-chappers>=1.1.0",
    "tabulate>=0.9.0",
    "tensorflow>=2.19.0",
    "xgboost>=3.0.0",
]
